--- a/README
+++ b/README
@@ -1,1 +1,4 @@
 Trabajo practico de SD
+Servidor Identificacion Personal puerto 2020
+Servidor de Imagenes puerto 2021
+Servidor Proxy de Idformacion Policial 2022
