--- a/README
+++ b/README
@@ -1,4 +1,4 @@
 Trabajo practico de SD
-Servidor Identificacion Personal puerto 2020
-Servidor de Imagenes puerto 2021
-Servidor Proxy de Idformacion Policial 2022
+Para compilar, entrar en la carpeta scripts y ejecutar compilar.sh (./compilar.sh)
+Para iniciar los servidores ./iniciarPlataforma.sh
+Para iniciar los clientes ./iniciarClientes.sh
