--- a/README
+++ b/README
@@ -2,3 +2,15 @@ Trabajo practico de SD
 Para compilar, entrar en la carpeta src/scripts y ejecutar compilar.sh (./compilar.sh)
 Para iniciar los servidores entrar en la carpeta src y ejecutar iniciarPlataforma.sh (./iniciarPlataforma.sh)
 Para iniciar los clientes entrar en la carpeta src y ejecutar iniciarClientes.sh (./iniciarClientes.sh)
+
+Integrantes 
+
+- Derlis Argüello
+
+- Thelma Balbuena
+
+- Jessica Gonzalez
+
+- Julio Reyes
+
+- Gerardo Riveros
